Upgrade Spring Boot to 3.3.5 and add @NonNull
Upgrade project to Spring Boot 3.3.5 and adjust pom dependencies (reorganized starters, added starter-test). Apply org.springframework.lang.NonNull across controllers, services and exception handler to improve null-safety, add Objects.requireNonNull usage where appropriate, and refactor parameter handling (extract local id variables and null checks). Migrate validation imports to jakarta.*, move validation annotations in AsignacionTurno, and make small cleanups (Locale.of usage, WebMvcConfig method signature formatting, minor DTO/service refactors). These changes prepare the codebase for Jakarta/Spring Boot 3 and improve runtime null-safety and input validation.